# convos

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
convos/: asgi.py  settings.py  urls.py  wsgi.py
