[tool.black]
line-length = 105
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vim
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "convos"
version = "0.0.0"
description = ""
authors = ["Meir <36854346+meirgarfinkel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.1"
django-cas-ng = "^4.3.0"
psycopg2 = "^2.9.6"
pre-commit = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
